mdapipkg/objects/OrderForm__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand_Assortment__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VitaOlefera</fullName>
                </value>
                <value>
                    <fullName>Sunology</fullName>
                </value>
                <value>
                    <fullName>Artic 4</fullName>
                </value>
                <value>
                    <fullName>Cate Mcnabb</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coupon_Field_Shown__c</fullName>
        <label>Coupon Field Shown</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Forced_Subscripiton__c</fullName>
        <label>Forced Subscripiton</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frictionless_Banner_Image__c</fullName>
        <label>Frictionless Banner Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Named_Agent__c</fullName>
        <label>Named Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Offer Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Offer_Shipping_Cost__c</fullName>
        <label>Offer Shipping Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt_In_Options__c</fullName>
        <label>Opt-In Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Optin</fullName>
                </value>
                <value>
                    <fullName>Optout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Form_Type__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Form Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Display Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductTobeSold__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>OrderForms</relationshipLabel>
        <relationshipName>OrderForms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Standard_Price__c</fullName>
        <description>The standard price of the product, to be scored out on the order form</description>
        <label>Product Standard Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <label>Route</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubscriptionBillingDays__c</fullName>
        <defaultValue>30</defaultValue>
        <label>SubscriptionBillingDays</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_Available__c</fullName>
        <label>Subscription Available</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>False</fullName>
                    <default>true</default>
                    <label>False</label>
                </value>
                <value>
                    <fullName>True</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Count__c</fullName>
        <label>Subscription Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_Days_Postpone__c</fullName>
        <label>Subscription Days Postpone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_Frequency__c</fullName>
        <label>Subscription Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Order_Repeat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscription Order Repeat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Subscription Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscription_Stop_Date__c</fullName>
        <label>Subscription Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Stop_On__c</fullName>
        <label>Subscription Stop On</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Count</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Full Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Upsell</fullName>
                </value>
                <value>
                    <fullName>Downsell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>OrderForm</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Type__c</columns>
        <columns>Offer_Price__c</columns>
        <columns>Active__c</columns>
        <columns>Brand_Assortment__c</columns>
        <columns>Order__c</columns>
        <columns>Order_Form_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Route__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Subscription</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Offer_Price__c</columns>
        <columns>Active__c</columns>
        <columns>Brand_Assortment__c</columns>
        <columns>Order__c</columns>
        <columns>Order_Form_Type__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Route__c</columns>
        <columns>Subscription_Available__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subscription_Available__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filters>
        <label>All Subscription</label>
    </listViews>
    <nameField>
        <label>OrderForm Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrderForms</pluralLabel>
    <recordTypes>
        <fullName>Bump_Offer</fullName>
        <active>true</active>
        <label>Bump Offer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Funnel</fullName>
        <active>true</active>
        <label>Funnel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Upsell</fullName>
        <active>true</active>
        <label>Upsell</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>